templates/argo/manifests/external-secrets.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: external-secrets
