templates/argo/manifests/argocd.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
# ---
# apiVersion: external-secrets.io/v1beta1
# kind: ExternalSecret
# metadata:
#   name: sso
#   namespace: argocd
#   labels:
#     app.kubernetes.io/part-of: argocd
# spec:
#   refreshInterval: "5m"
#   secretStoreRef:
#     kind: ClusterSecretStore
#     name: 1password
#   target:
#     creationPolicy: Owner
#   data:
#     - secretKey: client_id
#       remoteRef:
#         key: sso
#         property: argocd_client_id
#     - secretKey: client_secret
#       remoteRef:
#         key: sso
#         property: argocd_client_secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "argocd.<domain>"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: GRPCRoute
# metadata:
#   name: argocd
#   namespace: argocd
# spec:
#   parentRefs:
#   - name: internal
#     namespace: gateway
#     sectionName: https
#   hostnames:
#   - "argocd.<domain>"
#   rules:
#   - backendRefs:
#     - name: argocd-server
#       port: 80
---
## Private Repository Secret example
## https://argo-cd.readthedocs.io/en/stable/user-guide/private-repositories/
# apiVersion: v1
# kind: Secret
# metadata:
#   name: github
#   namespace: argocd
#   labels:
#     argocd.argoproj.io/secret-type: repo-creds
# type: Opaque
# stringData:
#   password: github_pat_xxxxxxxx
#   url:  https://github.com/xxxxxxxx/argocd-homelab.git
#   username: xxxxxxxx
#   type: git
