templates/argo/manifests/kube-system.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: kube-system
# ---
# apiVersion: argoproj.io/v1alpha1
# kind: Application
# metadata:
#   name: gatewaycrds
#   namespace: argocd
# spec:
#   destination:
#     namespace: kube-system
#     server: https://kubernetes.default.svc
#   project: default
#   source:
#     repoURL: https://github.com/mattkgwhite/empty.git
#     path: .
#     plugin:
#       name: kustomize-inline
#       env:
#         - name: KUSTOMIZATION_YAML
#           value: |-
#             apiVersion: kustomize.config.k8s.io/v1beta1
#             kind: Kustomization
#             resources:
#               - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.1/config/crd/standard/gateway.networking.k8s.io_gatewayclasses.yaml
#               - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.1/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
#               - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.1/config/crd/standard/gateway.networking.k8s.io_referencegrants.yaml
#               - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.1/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
#               - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.1/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
#               - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.2.1/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
#               - https://raw.githubusercontent.com/cilium/cilium/refs/heads/main/pkg/k8s/apis/cilium.io/client/crds/v2alpha1/ciliumloadbalancerippools.yaml
#               - https://raw.githubusercontent.com/cilium/cilium/refs/heads/main/pkg/k8s/apis/cilium.io/client/crds/v2alpha1/ciliumpodippools.yaml
#               - https://raw.githubusercontent.com/cilium/cilium/refs/heads/main/pkg/k8s/apis/cilium.io/client/crds/v2alpha1/ciliuml2announcementpolicies.yaml
#               - https://raw.githubusercontent.com/cilium/cilium/refs/heads/main/pkg/k8s/apis/cilium.io/client/crds/v2alpha1/ciliumendpointslices.yaml
#   syncPolicy:
#     automated:
#       allowEmpty: true
#       prune: true
#       selfHeal: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-grpc
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
    - host: hubble.<domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "hubble.<domain>"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: GRPCRoute
# metadata:
#   name: hubble
#   namespace: kube-system
#   annotations:
#     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
# spec:
#   parentRefs:
#   - name: internal
#     namespace: gateway
#     sectionName: https
#   hostnames:
#   - "hubble.<domain>"
#   rules:
#   - backendRefs:
#     - name: hubble-ui
#       port: 80
